# allo-cpp

./: .clang-format  .gitignore  .travis.yml  LICENSE  README.md  allo.hpp
extras/: README.md
extras/benchmarks/: CMakeLists.txt
extras/benchmarks/scripts/: generate-win-vs2015-x64.cmd
extras/benchmarks/src/: benchmarks.cpp
extras/tests/: CMakeLists.txt
extras/tests/src/: tests.cpp
include/: allo.hpp  allo_abandon.hpp  allo_abandonable_trait.hpp  allo_counting_allocator.hpp  allo_never_look_back_allocator.hpp  allo_private_allocator.hpp
include/allocation_strategies/: allo_counting_strategy.hpp  allo_never_look_back_allocation_strategy.hpp  allo_never_look_back_strategy.hpp
include/containers/: allo_wrapped_container.hpp  allo_wrapped_map.hpp
